--- a/FMML_ClassificationII_Lab4_EnsembleMethods.ipynb
+++ b/FMML_ClassificationII_Lab4_EnsembleMethods.ipynb
@@ -98,7 +98,7 @@
         "from sklearn.metrics import accuracy_score, confusion_matrix, plot_confusion_matrix\n",
         "from sklearn.experimental import enable_iterative_imputer\n",
         "from sklearn.impute import IterativeImputer\n",
-        "import matplotlib.pyplot as plt\n"
+        "import matplotlib.pyplot as plt"
       ],
       "execution_count": 1,
       "outputs": []
@@ -242,7 +242,7 @@
           "height": 564
         },
         "id": "thtYDz2YxsGl",
-        "outputId": "7043dcb4-2e7f-45eb-80eb-76838fc91738"
+        "outputId": "c9774444-984a-4373-9ad6-c6fbe679ea57"
       },
       "source": [
         "plt.figure(figsize=(5,4))\n",
@@ -305,7 +305,7 @@
           "height": 1000
         },
         "id": "rzdH85RvykXF",
-        "outputId": "b15bae2a-1e07-4cf2-9a89-e30acc914e43"
+        "outputId": "41e86935-b0dd-4e92-deef-dc8962f254b3"
       },
       "source": [
         "plt.style.use(\"default\")\n",
@@ -403,7 +403,7 @@
           "height": 559
         },
         "id": "RW1w1YKPumaM",
-        "outputId": "fdd47e3e-9530-4ba7-b58b-863b937db83b"
+        "outputId": "d8a3c1da-7406-41b9-d0f2-9d607b3f03c7"
       },
       "source": [
         "plt.style.use(\"seaborn\")\n",
@@ -448,7 +448,7 @@
           "height": 368
         },
         "id": "OQ9bcNnchgvY",
-        "outputId": "6092cd3a-6820-46fc-bd16-caa0c382399c"
+        "outputId": "bbd03cf4-50a4-4b9d-d428-02942b119133"
       },
       "source": [
         "X = ar\n",
@@ -485,7 +485,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2Yt95KcqichO",
-        "outputId": "ef39cc04-663f-42f9-9d0d-2ab1aa273a00"
+        "outputId": "c37d523d-eb04-4b9d-c1b1-10257be1a2db"
       },
       "source": [
         "\n",
@@ -590,7 +590,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TasV3ae-z0So",
-        "outputId": "72aae679-b7bb-42ae-e4ba-a06ec2f1f8bc"
+        "outputId": "7c597869-9a45-4224-df04-2e2ba2a91108"
       },
       "source": [
         "import os\n",
@@ -680,7 +680,7 @@
           "height": 448
         },
         "id": "w-DDxxvr0_pk",
-        "outputId": "99f4f01c-c313-4de4-9a53-30ee7f0a8eb2"
+        "outputId": "9ce9105c-a6cc-4981-f2d2-525c0778696c"
       },
       "source": [
         "plt.style.use(\"default\")\n",
@@ -735,7 +735,7 @@
           "height": 559
         },
         "id": "8yqUPCAd1AP_",
-        "outputId": "5ada7c04-51be-4ae9-ba27-8eadbb0a8deb"
+        "outputId": "837ac71c-a5a2-45cb-e99d-cd41b011c8c5"
       },
       "source": [
         "plt.style.use(\"seaborn\")\n",
@@ -826,7 +826,7 @@
           "height": 484
         },
         "id": "LBqMbCxf6FEf",
-        "outputId": "b27d8ec3-efeb-4439-f20d-b2523ee947a2"
+        "outputId": "5d2e52ec-262d-4148-927f-20ceccfb3022"
       },
       "source": [
         "plt.plot(treeDat, \"rv--\", label=\"Decision Trees\")\n",
@@ -886,7 +886,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "p1pRA3Kw-Foa",
-        "outputId": "6022a296-af25-4d53-81f5-c23b3b04c575"
+        "outputId": "364313cb-f656-4548-e4d3-de60cb42e0d1"
       },
       "source": [
         "import time\n",
@@ -911,8 +911,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Time taken for SVM: 10.490315437316895\n",
-            "Time taken for Random Forests: 0.7505066394805908\n"
+            "Time taken for SVM: 5.16966438293457\n",
+            "Time taken for Random Forests: 0.2216184139251709\n"
           ]
         }
       ]
